--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -272,6 +272,79 @@ html {
   width: 100%;
 }
 
+@-webkit-keyframes rotateIn {
+  from {
+    -webkit-transform-origin: center;
+    transform-origin: center;
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+    border-radius: 10px;
+  }
+  80% {
+    border-radius: 50%;
+  }
+  to {
+    -webkit-transform-origin: center;
+    transform-origin: center;
+    -webkit-transform: rotate(-360deg);
+    transform: rotate(-360deg);
+    border-radius: 10px;
+  }
+}
+@keyframes rotateIn {
+  from {
+    -webkit-transform-origin: center;
+    transform-origin: center;
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+    border-radius: 10px;
+  }
+  80% {
+    border-radius: 50%;
+  }
+  to {
+    -webkit-transform-origin: center;
+    transform-origin: center;
+    -webkit-transform: rotate(-360deg);
+    transform: rotate(-360deg);
+    border-radius: 10px;
+  }
+}
+#preloader {
+  position: fixed;
+  z-index: 999;
+  background: #464646;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#preloader img {
+  display: block;
+  width: 100px;
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+}
+#preloader .animation {
+  -webkit-animation-duration: 2s;
+  animation-duration: 2s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-timing-function: cubic-bezier(0.85, 0, 0.15, 1);
+  animation-timing-function: cubic-bezier(0.85, 0, 0.15, 1);
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-name: rotateIn;
+  animation-name: rotateIn;
+}
+#preloader.hidden {
+  transition: all 0.5s;
+  opacity: 0;
+}
+
 @media (max-width: 1000px) {
   .header .content {
     flex-direction: column;
