--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -355,6 +355,20 @@ html {
     text-align: center;
   }
 }
+.hidden {
+  opacity: 0;
+}
+
+.show {
+  opacity: 1;
+}
+
+section {
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+}
+
 .bot-info {
   padding: 80px 40px;
   width: calc(80% - 40px * 2);
@@ -420,7 +434,7 @@ html {
   width: calc(80% - 40px * 2);
   max-width: 1400px;
   background: #464646;
-  border-radius: 10px;
+  border-radius: 100px 0 100px 0;
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
@@ -484,6 +498,10 @@ html {
 }
 
 @media (max-width: 1000px) {
+  .bot-info {
+    padding: 80px 20px;
+    width: calc(90% - 20px * 2);
+  }
   .bot-info .bot-info-box {
     flex-direction: column-reverse;
   }
@@ -503,6 +521,11 @@ html {
   }
   .bot-info .bot-info-box .bot-info-img {
     width: 100%;
+  }
+
+  .bot-commands {
+    padding: 100px 20px;
+    width: calc(90% - 20px * 2);
   }
 
   .bot-button {
